# GmshPipeline

./: CMakeLists.txt
MyGmshExtension/: CMakeLists.txt  MyGmshExtension.py
MyGmshExtension/Resources/UI/: MyGmshExtension.ui
